chore(config): add initial agents documentation and update eslint configuration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
-        "source.fixAll.eslint": "explicit",
+        "source.fixAll.eslint": "never",
         "source.removeUnusedImports": "always",
         "source.organizeImports": "always"
     },
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "typescript.tsdk": "node_modules\\typescript\\lib"
+    "editor.defaultFormatter": "prettier.prettier-vscode",
+    "typescript.tsdk": "node_modules\\typescript\\lib",
+    "[typescriptreact]": {
+        "editor.defaultFormatter": "prettier.prettier-vscode"
+    }
 }
